--- a/style.css
+++ b/style.css
@@ -5,15 +5,20 @@ body{
 h1{
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
-    margin-bottom: 70px;
     text-shadow: 0 0 2rem #000000;;
+    margin-bottom: 0px;
+}
+h4{
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 70px;
 }
 
 p{
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
     font-size: larger;
-    margin-top: 50px; 
+    margin-top: 30px; 
 }
 
 h2{
@@ -26,6 +31,7 @@ h2{
     display: flex;
     justify-content: center;
     gap: 8rem; 
+    margin-bottom: 70px;
 }
 
 .caja{
